--- a/_config.yml
+++ b/_config.yml
@@ -498,21 +498,21 @@ leancloud_visitors:
 
 # Show PV/UV of the website/page with busuanzi.
 # Get more information on http://ibruce.info/2015/04/04/busuanzi/
-busuanzi_count:
+#busuanzi_count:
   # count values only if the other configs are false
-  enable: true
+ # enable: true
   # custom uv span for the whole site
-  site_uv: true
-  site_uv_header: 本站访问数
-  site_uv_footer: 人次
+ # site_uv: true
+  #site_uv_header: 本站访问数
+  #site_uv_footer: 人次
   # custom pv span for the whole site
-  site_pv: true
-  site_pv_header: 本站总访问量
-  site_pv_footer: 次
+  #site_pv: true
+  #site_pv_header: 本站总访问量
+  #site_pv_footer: 次
   # custom pv span for one page only
-  page_pv: true
-  page_pv_header: 本文总阅读量
-  page_pv_footer: 次
+  #page_pv: true
+  #page_pv_header: 本文总阅读量
+  #page_pv_footer: 次
 
 
 # Tencent analytics ID
@@ -603,7 +603,7 @@ pace_theme: pace-theme-minimal
 canvas_nest: false
 
 # three_waves
-three_waves: true
+three_waves: false
 
 # canvas_lines
 canvas_lines: false
