--- a/_config.yml
+++ b/_config.yml
@@ -150,8 +150,8 @@ menu_icons:
 
 # Schemes
 #scheme: Muse
-scheme: Mist
-#scheme: Pisces
+#scheme: Mist
+scheme: Pisces
 
 
 # ---------------------------------------------------------------
@@ -226,9 +226,9 @@ social_icons:
   # Icon Mappings.
   # KeyMapsToSocialItemKey: NameOfTheIconFromFontAwesome
   GitHub: github
-  Twitter: twitter
-  Weibo: weibo
-  简书: etsy
+  #Twitter: twitter
+  #Weibo: weibo
+  #简书: etsy
 
   
 # reward
