--- a/_config.yml
+++ b/_config.yml
@@ -121,7 +121,7 @@ menu:
   archives: /archives/
   tags: /tags/
   sitemap: /sitemap.xml
-  commonweal: /404.html
+ # commonweal: /404.html
 
 
 # Enable/Disable menu icons.
