--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@
 # ---------------------------------------------------------------
 
 # Site
-title: Shylinshine的博客
-subtitle: Choose You Own Path
+title: 吴同学的学习笔记
+subtitle: Be what you want to be
 description: 纸上得来终觉浅,绝知此事要躬行
-author: Shylinshine
+author: wu
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
 language: zh-Hans
 date_format: '%Y-%m-%d'
